--- a/gwtp-begginer/pom.xml
+++ b/gwtp-begginer/pom.xml
@@ -105,6 +105,12 @@
             <version>${gwtp.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.gwtplatform.extensions</groupId>
+            <artifactId>dispatch-rest-delegates</artifactId>
+            <version>${gwtp.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- DI -->
         <dependency>
